# docs/swagger.json
@@ -13,8 +13,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "name",
-                        "name": "username",
+                        "description": "13112345678",
+                        "name": "phone",
                         "in": "formData",
                         "required": true
                     },
@@ -24,6 +24,36 @@
                         "name": "password",
                         "in": "formData",
                         "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\":200,\"data\":\"\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/random": {
+            "get": {
+                "tags": [
+                    "公共方法"
+                ],
+                "summary": "随机选择",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "status",
+                        "name": "status",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "number",
+                        "name": "number",
+                        "in": "query"
                     }
                 ],
                 "responses": {
