# router/app.go
@@ -8,13 +8,14 @@ import (
 	"select_menu/service"
 )
 
-func Router() *gin.Engine {
+func Router(r *gin.Engine) {
 	//创建一个默认的路由引擎
-	r := gin.Default()
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	//用户路由
 	r.POST("/login", service.Login)
 	r.POST("/register", service.Register)
 
-	return r
+	//食物
+	r.GET("/random", service.Random)
+
 }
